--- a/EjerciciosHtml/Ejercicios/Ejercicios.csproj
+++ b/EjerciciosHtml/Ejercicios/Ejercicios.csproj
@@ -105,6 +105,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Ejercicio1.cshtml" />
     <Content Include="Views\Home\Ejercicio2.cshtml" />
+    <Content Include="Views\Home\EjercicioEnlaces.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
