--- a/EjerciciosHtml/Ejercicios/Ejercicios.csproj
+++ b/EjerciciosHtml/Ejercicios/Ejercicios.csproj
@@ -106,6 +106,7 @@
     <Content Include="Views\Home\Ejercicio1.cshtml" />
     <Content Include="Views\Home\Ejercicio2.cshtml" />
     <Content Include="Views\Home\EjercicioEnlaces.cshtml" />
+    <Content Include="Views\Home\Ejercicio3.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
